--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@
     }
 
     /* ===== Target Zahl auf farbigen Feldern ===== */
-    /* FIX: Rotation darf NICHT durch Animation überschrieben werden -> Rotation über CSS-Variable */
     @keyframes targetBreath{
       0%,100%{ transform: translate(-50%, -50%) rotate(var(--trot, 0deg)) scale(1); opacity: 0.95; }
       50%    { transform: translate(-50%, -50%) rotate(var(--trot, 0deg)) scale(1.10); opacity: 1; }
@@ -219,7 +218,7 @@
       left:50%;
       top:50%;
       font-weight: 900;
-      font-size: clamp(18px, 8vmin, 36px); /* exakt wie Slot-Zahlen */
+      font-size: clamp(18px, 8vmin, 36px);
       color: rgba(0,0,0,0.92);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       line-height: 1;
@@ -234,11 +233,10 @@
       justify-content:center;
     }
 
-    /* ✅ Zahlenfuß IMMER Richtung Boxmitte */
-    .trot-top    { --trot: 0deg; }     /* oben: Fuß nach unten */
-    .trot-bottom { --trot: 180deg; }   /* unten: Fuß nach oben */
-    .trot-left   { --trot: -90deg; }   /* links: Fuß nach rechts (zur Mitte) */
-    .trot-right  { --trot: 90deg; }    /* rechts: Fuß nach links (zur Mitte) */
+    .trot-top    { --trot: 0deg; }
+    .trot-bottom { --trot: 180deg; }
+    .trot-left   { --trot: -90deg; }
+    .trot-right  { --trot: 90deg; }
 
     /* ===== FLOOR ===== */
     .floor{
@@ -282,6 +280,7 @@
       pointer-events: none;
     }
 
+    /* Pivot ist Raster-Mitte (4*step). Rotation erfolgt um Box-Mittelpunkt. */
     .wFaceGroup,
     .kipGroup{
       position:absolute;
@@ -672,7 +671,7 @@
 
     /* ===== KIPPANZAHL Label + Layout FIX ===== */
     #decisionPanel{
-      padding: 0 12px; /* linksbündig mit erster Taste wie gewünscht */
+      padding: 0 12px;
       box-sizing: border-box;
     }
 
@@ -683,7 +682,6 @@
       color: var(--ui-text);
       text-shadow: 0 1px 0 rgba(0,0,0,0.35);
 
-      /* so groß wie 00P */
       font-size: 34px;
       line-height: 0.95;
 
@@ -691,7 +689,7 @@
       user-select:none;
 
       margin-top: 10px;
-      margin-bottom: 14px; /* größerer Abstand zu den Buttons */
+      margin-bottom: 10px;
     }
 
     /* ===== Kippanzahl Buttons ===== */
@@ -700,9 +698,8 @@
       border: 1px solid rgba(0,0,0,0.35);
       background: rgba(234,215,190,0.95);
       color: #2a160c;
-      font-weight: 1000;
 
-      /* ✅ Zahl exakt wie Slotzahlen */
+      font-weight: 1000;
       font-size: clamp(18px, 8vmin, 36px);
       line-height: 1;
 
@@ -718,6 +715,61 @@
     .miniBtn:active{ transform: translateY(1px) scale(0.99); }
 
     .miniBtn.sel{
+      background: var(--ui-panel-bg);
+      color: var(--ui-text);
+      border-color: rgba(0,0,0,0.55);
+    }
+
+    /* ===== Richtungszeile ===== */
+    .dirRow{
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .dirLabel{
+      flex: 1 1 auto;
+      font-weight: 1000;
+      letter-spacing: 0.10em;
+      text-transform: uppercase;
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      font-size: 20px;
+      line-height: 1;
+      user-select:none;
+      white-space: nowrap;
+    }
+    .dirBtns{
+      display:flex;
+      gap: 8px;
+      flex: 0 0 auto;
+    }
+    .dirBtn{
+      width: 56px;
+      height: 56px;
+      border-radius: 10px;
+      border: 1px solid rgba(0,0,0,0.35);
+      background: rgba(234,215,190,0.95);
+      color: #2a160c;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.20),
+        0 0 0 1px rgba(255,255,255,0.12) inset;
+      cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
+      user-select:none;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-weight: 1000;
+      font-size: 34px;
+      line-height: 1;
+      padding: 0;
+    }
+    .dirBtn:active{ transform: translateY(1px) scale(0.99); }
+
+    .dirBtn.sel{
       background: var(--ui-panel-bg);
       color: var(--ui-text);
       border-color: rgba(0,0,0,0.55);
@@ -739,7 +791,7 @@
     .attnPlay #btnPlay{ animation: blinkSoft 0.9s ease-in-out infinite; }
     .attnSet .gcBtn.set{ animation: blinkSoft 0.85s ease-in-out infinite; }
 
-    /* Pulsieren versetzt */
+    /* Pulsieren versetzt (Kippanzahl) */
     #decisionPanel.pulseSeq .miniBtn{ animation: pulseSoft 1.15s ease-in-out infinite; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(1){ animation-delay: 0.00s; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(2){ animation-delay: 0.10s; }
@@ -747,6 +799,15 @@
     #decisionPanel.pulseSeq .miniBtn:nth-child(4){ animation-delay: 0.30s; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(5){ animation-delay: 0.40s; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(6){ animation-delay: 0.50s; }
+
+    /* Richtungsbuttons pulsieren abwechselnd, wenn dran */
+    #decisionPanel.pulseDir .dirBtn{ animation: pulseSoft 1.15s ease-in-out infinite; }
+    #decisionPanel.pulseDir .dirBtn[data-dir="ccw"]{ animation-delay: 0.00s; }
+    #decisionPanel.pulseDir .dirBtn[data-dir="cw"] { animation-delay: 0.35s; }
+
+    /* wenn Richtung noch nicht freigegeben: ausgegraut */
+    .dirRow.locked{ opacity: 0.50; }
+    .dirRow.locked .dirBtn{ pointer-events: none; }
   </style>
 </head>
 
@@ -755,7 +816,6 @@
 
     <!-- HEADER -->
     <div class="titleRow" aria-label="Titelzeile">
-      <!-- FIX 1: Back-Button gleicher Typus wie X (kein Emoji) -->
       <button id="backBtn" class="navBtn" aria-label="Zurück zur Speed-Einstellung" type="button">
         <span>←</span>
       </button>
@@ -846,6 +906,7 @@
               <div id="decisionPanel" class="hidden">
                 <div class="kippCountTitle">KIPPANZAHL?</div>
 
+                <!-- Zeile 2: 1–6 -->
                 <div class="gcRow" aria-label="Kippanzahl">
                   <button class="miniBtn" data-k="1" type="button">1</button>
                   <button class="miniBtn" data-k="2" type="button">2</button>
@@ -854,6 +915,16 @@
                   <button class="miniBtn" data-k="5" type="button">5</button>
                   <button class="miniBtn" data-k="6" type="button">6</button>
                 </div>
+
+                <!-- Zeile 3: Richtung -->
+                <div id="dirRow" class="dirRow locked" aria-label="Kipprichtung">
+                  <div class="dirLabel">KIPPRICHTUNG?</div>
+                  <div class="dirBtns">
+                    <button id="btnDirCCW" class="dirBtn" data-dir="ccw" type="button" aria-label="gegen Uhrzeigersinn">↺</button>
+                    <button id="btnDirCW"  class="dirBtn" data-dir="cw"  type="button" aria-label="im Uhrzeigersinn">↻</button>
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -885,6 +956,10 @@
 
     const btnSetNumbers = document.getElementById("btnSetNumbers");
     const decisionPanel = document.getElementById("decisionPanel");
+
+    const dirRow     = document.getElementById("dirRow");
+    const btnDirCCW  = document.getElementById("btnDirCCW");
+    const btnDirCW   = document.getElementById("btnDirCW");
 
     const gcPoints    = document.getElementById("gcPoints");
     const gcHi        = document.getElementById("gcHi");
@@ -993,9 +1068,17 @@
       kipGroup.style.setProperty("--rot", deg + "deg");
     }
 
+    // Vorwärts: 90° CW, Face zyklisch 0->1->2->0
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
+      setRotationSnap();
+    }
+
+    // Rückwärts: 90° CCW, Face zyklisch 0->2->1->0
+    function advanceFullCCW(){
+      rotIndex  = (rotIndex + 3) % 4; // -1 mod 4
+      faceIndex = (faceIndex + 2) % 3; // -1 mod 3
       setRotationSnap();
     }
 
@@ -1184,20 +1267,35 @@
       for(let i=0;i<4;i++) renderNumber(slotTargetsW[i], curr[i]);
     }
 
+    // Mapping: wird als "Foto" der Zwischenkippansicht behandelt (self-inverse)
     function mapHiddenToVisible_CW(face){
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
     }
+    function mapHiddenToVisible_CCW(face){
+      // Inverse von reverse ist reverse -> gleiches Mapping, aber andere Face-Auswahl (prev statt next)
+      const [f1,f2,f3,f4] = face;
+      return [f4, f3, f2, f1];
+    }
 
-    function renderKip(){
+    function renderKipDir(dir){
       setRotationSnap();
       const curr = sets[faceIndex];
-      const nextFaceIndex = (faceIndex + 1) % 3;
-      const next = sets[nextFaceIndex];
 
+      // curr ist immer rechte Fläche (vorne)
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
-      const nextPreview = mapHiddenToVisible_CW(next);
-      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
+
+      if(dir === "ccw"){
+        const prevFaceIndex = (faceIndex + 2) % 3;
+        const prev = sets[prevFaceIndex];
+        const prevPreview = mapHiddenToVisible_CCW(prev);
+        for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], prevPreview[i]);
+      }else{
+        const nextFaceIndex = (faceIndex + 1) % 3;
+        const next = sets[nextFaceIndex];
+        const nextPreview = mapHiddenToVisible_CW(next);
+        for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
+      }
     }
 
     function reroll12_keepEmpty(){
@@ -1235,7 +1333,8 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      // Vorschau 1
+      showKip(); renderKipDir("cw");
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
@@ -1247,7 +1346,8 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      // Vorschau 2
+      showKip(); renderKipDir("cw");
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
@@ -1259,36 +1359,15 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      // Vorschau 3
+      showKip(); renderKipDir("cw");
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
-      // ===== Bisheriges Ende (Q3, W1 oben) =====
+      // Ende: wieder W, voll
       advanceFullCW();
       showW();
       renderW();
-
-      // ✅ NEU: 3 zusätzliche komplette Kipps ab dem bisherigen Ende
-      // Zweck: weitere vollbestückte Zwischenkipps sichtbar machen / rückwärts sauber abspielbar
-      const EXTRA_KIPPS_AFTER_END = 3;
-
-      // kurzer Hold, damit man den bisherigen Endzustand kurz "stehen" sieht
-      await sleep(Math.round(getTiming().holdMs * 0.60));
-      if(myToken!==setToken){ runningSet=false; return; }
-
-      for(let j=0; j<EXTRA_KIPPS_AFTER_END; j++){
-        showKip();
-        renderKip();
-        await sleep(getTiming().holdMs);
-        if(myToken!==setToken){ runningSet=false; return; }
-
-        advanceFullCW();
-
-        showW();
-        renderW();
-        await sleep(Math.round(getTiming().holdMs * 0.60));
-        if(myToken!==setToken){ runningSet=false; return; }
-      }
 
       runningSet = false;
 
@@ -1384,12 +1463,16 @@
     }
 
     let selectedKippCount = null;
+    let selectedDir = null;
 
-    function startPulse(){
-      decisionPanel.classList.add("pulseSeq");
-    }
-    function stopPulse(){
-      decisionPanel.classList.remove("pulseSeq");
+    function startPulseCount(){ decisionPanel.classList.add("pulseSeq"); }
+    function stopPulseCount(){ decisionPanel.classList.remove("pulseSeq"); }
+
+    function startPulseDir(){ decisionPanel.classList.add("pulseDir"); }
+    function stopPulseDir(){ decisionPanel.classList.remove("pulseDir"); }
+
+    function lockDir(on){
+      dirRow.classList.toggle("locked", !!on);
     }
 
     function selectKippCount(k){
@@ -1397,15 +1480,60 @@
       document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
         btn.classList.toggle("sel", Number(btn.dataset.k) === selectedKippCount);
       });
-      if(selectedKippCount != null) stopPulse();
+      if(selectedKippCount != null){
+        stopPulseCount();
+        lockDir(false);
+        startPulseDir();
+      }else{
+        lockDir(true);
+        stopPulseDir();
+        startPulseCount();
+      }
+    }
+
+    function selectDir(dir){
+      selectedDir = dir;
+      [btnDirCCW, btnDirCW].forEach(b=>{
+        b.classList.toggle("sel", b.dataset.dir === selectedDir);
+      });
+    }
+
+    function resetDecisionUI(){
+      selectDir(null);
+      [btnDirCCW, btnDirCW].forEach(b=> b.classList.remove("sel"));
+      selectedDir = null;
+
+      // Richtung erst nach Zahl
+      lockDir(true);
+      stopPulseDir();
+
+      // Zahl zurück
+      selectedKippCount = null;
+      document.querySelectorAll('.miniBtn[data-k]').forEach(btn=> btn.classList.remove("sel"));
+      startPulseCount();
     }
 
     document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
       btn.addEventListener("click", () => {
         if(busyMove) return;
         selectKippCount(btn.dataset.k);
-        performKippCW(selectedKippCount);
       });
+    });
+
+    btnDirCW.addEventListener("click", async () => {
+      if(busyMove) return;
+      if(selectedKippCount == null) return;
+      stopPulseDir();
+      selectDir("cw");
+      await performKippDir(selectedKippCount, "cw");
+    });
+
+    btnDirCCW.addEventListener("click", async () => {
+      if(busyMove) return;
+      if(selectedKippCount == null) return;
+      stopPulseDir();
+      selectDir("ccw");
+      await performKippDir(selectedKippCount, "ccw");
     });
 
     function beginPlayerPhase(){
@@ -1421,8 +1549,7 @@
       deckCount = Array(13).fill(0);
       pickNewTarget();
 
-      selectKippCount(null);
-      startPulse();
+      resetDecisionUI();
     }
 
     function endGame(){
@@ -1448,7 +1575,7 @@
 
     let busyMove = false;
 
-    async function performKippCW(count){
+    async function performKippDir(count, dir){
       if(busyMove) return;
       if(!count) return;
 
@@ -1458,10 +1585,11 @@
 
       for(let i=0; i<c; i++){
         showKip();
-        renderKip();
+        renderKipDir(dir);
         await sleep(getTiming().holdMs);
 
-        advanceFullCW();
+        if(dir === "ccw") advanceFullCCW();
+        else advanceFullCW();
 
         showW();
         renderW();
@@ -1481,9 +1609,7 @@
         }
       }
 
-      selectKippCount(null);
-      startPulse();
-
+      resetDecisionUI();
       busyMove = false;
     }
 
